# chord_shifter

./: .gitignore  .typos.toml  Cargo.toml  Dioxus.toml  README.md  chord_shifter.db
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
src/: auth.rs  db.rs  main.rs  pdf.rs  song.rs
