[package]
name = "chord_shifter"
version = "0.1.0"
edition = "2021"

[features]
default  = ["desktop"]
desktop  = ["dioxus/desktop", "dioxus/minimal", "dioxus/router"]
web      = ["dioxus/web",     "dioxus/minimal", "dioxus/router"]

[dependencies]
dioxus   = { version = "0.6", default-features = false }
printpdf = "0.6"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
# Password hashing – pure Rust, works on both native and wasm32
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
# CSPRNG for salt generation; wasm_js backend makes getrandom work in the browser
getrandom = { version = "0.2", features = ["js"] }
manganis = "0.7"

# SQLite – only on native targets (not WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }

# Web-only: used to trigger an in-browser PDF download
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys      = { version = "0.3", features = [
    "Blob", "BlobPropertyBag", "Document",
    "HtmlAnchorElement", "Storage", "Url", "Window",
] }
wasm-bindgen = "0.2"
js-sys       = "0.3"
zip          = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
